More styling: fixed link visibility via div and link classes, etc

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -19,26 +19,30 @@
     background-repeat: no-repeat;
     background-size: cover;
     color: #333;
-    font-family: Sans-Serif;
+    font-family: Futura, Arial, Sans-Serif;
     line-height: 18px;
   }
 
-/*NEED TO FIX MENU, THIS DOESN'T WORK AS I'D LIKE*/
   nav {
     background-color: #000000;
     width: 100%;
-    /*height: 100%;*/
-    margin: 10px 0px 30px 0px;
+    height: 100%;
+    margin: 0px 0px 20px 0px;
 
   }
 
-  nav a {
+  a {
+    color: #333;
+    text-decoration: none;
+  }
+
+  nav  {
     display: inline-block;
-    line-height: 20px;
-    padding: 0px 20px;
   }
 
-  nav a:link, a:visited {
+
+
+  a.menu:link, a.menu:visited {
       color: white;
       padding: 14px 25px;
       text-align: center;
@@ -46,14 +50,18 @@
       display: inline-block;
   }
 
-  nav a:hover, a:active {
+  a.menu:hover, a.menu:active {
       background-color: red;
+      color: white;
   }
 
+  ul {
+    list-style: none;
+  }
 
   li {
     display: inline-block;
-    padding: 10px;
+    padding: 0px;
   }
 
   .wrapper {
@@ -61,7 +69,7 @@
     -moz-box-shadow: 0 0 10px rgba(0,0,0,.3);
     -webkit-box-shadow: 0 0 10px rgba(0,0,0,.3);
     box-shadow: 0 0 10px rgba(0,0,0,.3);
-    margin: 16px auto;
+    margin: 30px auto;
     max-width: 960px;
     padding: 2.25%; /* 18px / 800px */
     width: 85%;
@@ -93,6 +101,8 @@
   }
 
   .content {
+    color: #333;
+    padding: 10px;
     float: left;
     width: 60%; /* 480px / 800px */
   }
